--- a/Mojave10.14.6/EFI/CLOVER/config.plist
+++ b/Mojave10.14.6/EFI/CLOVER/config.plist
@@ -316,7 +316,7 @@
 			<true/>
 		</dict>
 		<key>Theme</key>
-		<string>Catalina</string>
+		<string>Mojave</string>
 	</dict>
 	<key>Graphics</key>
 	<dict>
